[package]
name = "token-info-sign"
version = "0.1.0"
authors = ["wanghengtao <wanghengtao@juzix.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.4.5"
serde_derive = "1.0.32"
serde = "1.0.32"
clap = "~2.27.0"
hex = "0.4"
bitcoin_hashes = "0.10.0"
secp256k1 = { git = "https://github.com/rust-bitcoin/rust-secp256k1.git" }
